--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "click-outside-vue3": "^4.0.1",
     "nuxt": "^3.12.4",
     "nuxt-icons": "^3.2.1",
     "vue": "latest"
